--- a/app/assets/main.css
+++ b/app/assets/main.css
@@ -118,4 +118,8 @@
   body {
     @apply bg-background text-foreground;
   }
+  html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 5rem;
+  }
 }
